--- a/CRM_System/AddProductPage.xaml
+++ b/CRM_System/AddProductPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CRM_System.AddClientPage"
+﻿<Page x:Class="CRM_System.AddProductPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:CRM_System"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AddClientPage">
+      Title="AddProductPage">
     <Page.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="175"/>
@@ -46,32 +46,21 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Наименование предприятия" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,19"/>
-        <TextBlock Text="Фамилия" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Margin="75,19"/>
-        <TextBlock Text="Имя" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2" Margin="95,20,94,19"/>
-        <TextBlock Text="Отчество" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3" Margin="76,19"/>
-        <TextBlock Text="Номер телефона" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="4" Margin="42,19,41,19"/>
-        <TextBlock Text="Адрес" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="5" Margin="85,19"/>
-        <TextBlock Text="Статус" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="6" Margin="84,19"/>
+        <TextBlock Text="Название" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock Text="Тип продукта" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1"/>
+        <TextBlock Text="Цена" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2"/>
         <TextBox Grid.Column="1" VerticalAlignment="Center" Height="35" Margin="0,11"/>
-        <TextBox Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
         <TextBox Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Height="30" Margin="0,14"/>
-        <TextBox Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" Height="30" Margin="0,14,0,13"/>
-        <TextBox Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <TextBox Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Height="30"  Margin="0,14,0,13"/>
-        <ComboBox Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <TextBlock Text="Фото" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="3" VerticalAlignment="Center"/>
-        <Image x:Name="I_PhotoC" Grid.Column="3" Grid.Row="2" Grid.RowSpan="4"/>
-        <Button x:Name="ButtonImage" Grid.Column="3" Grid.Row="6" Content="Добавить фото" Click="Button_Click"/>
+        <ComboBox Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
+        <StackPanel Grid.Column="2" Grid.RowSpan="3" Orientation="Vertical" Width="Auto" Height="Auto" Margin="0 10 0 10">
+            <TextBlock Text="Фото" FontSize="20" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Image x:Name="I_PhotoP" Source="Resources/NoPhoto.png"/>
+            <Button x:Name="ButtonImage" Content="Добавить фото" Click="Button_Click"/>
+        </StackPanel>
         <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
-            <Button Content="Добавить договор"/>
-            <Button Content="Добавить клиента"/>
+            <Button Content="Добавить продукцию"/>
         </StackPanel>
     </Grid>
 </Page>
