--- a/CRM_System/MenuWindow.xaml
+++ b/CRM_System/MenuWindow.xaml
@@ -26,30 +26,19 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="1" Background="#F1F4FB"/>
-        <Grid Background="#F1F4FB"/>
-        <Grid Grid.Column="1" Background="#F1F4FB"/>
         <StackPanel Grid.RowSpan="2">
             <Image Source="Resources/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50"/>
             <Button Content="Аналитика"/>
             <Button Content="Воронка продаж"/>
             <Button Content="Клиенты"/>
             <Button Content="Заявки"/>
+            <Button Content="Товары"/>
             <Button Content="Отчет"/>
         </StackPanel>
-        <Border Margin="5" x:Name="SearchClient"  Width="200" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" CornerRadius="20" Grid.Column="1" Background="White" BorderBrush="#FFCEA345" BorderThickness="1">
-            <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBox x:Name="Search"  Background="White" BorderBrush="White"/>
-                <Image Source="Resources/Search2.png" Height="20" Width="20"/>
-            </StackPanel>
-        </Border>
     </Grid>
 </Window>
