--- a/CRM_System/RequestPage.xaml
+++ b/CRM_System/RequestPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CRM_System.ClientPage"
+﻿<Page x:Class="CRM_System.RequestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:CRM_System"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ClientPage">
+      Title="RequestPage">
     <Page.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="175"/>
@@ -38,22 +38,18 @@
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="139*"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="DGR_Clients">
+        <DataGrid>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Предприятие"  Binding="{Binding Path=TitleCompany}" Width="*"/>
-                <DataGridTextColumn Header="Фамилия"  Binding="{Binding Path=LastName}" Width="*"/>
-                <DataGridTextColumn Header="Имя"  Binding="{Binding Path=FirstName}" Width="*"/>
-                <DataGridTextColumn Header="Отчество"  Binding="{Binding Path=Patronymic}" Width="*"/>
-                <DataGridTextColumn Header="Номер телефона" Binding="{Binding Path=Phone}" Width="*"/>
-                <DataGridTextColumn Header="Адрес"  Binding="{Binding Path=AddressCompany}" Width="*"/>
-                <DataGridTextColumn Header="Тэг"  Binding="{Binding Path=Tag}" Width="*"/>
+                <DataGridTextColumn Header="Клиент" Binding="{Binding Path=Client.TitleCompany}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Path=StatusRequest}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата" Binding="{Binding Path=DateRequest}" Width="*"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Открыть профиль"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Продукция в заявке"/>
             <Button Content="Добавить"/>
             <Button Content="Редактировать"/>
             <Button Content="Удалить"/>
