--- a/CRM_System/AddClientPage.xaml
+++ b/CRM_System/AddClientPage.xaml
@@ -35,6 +35,28 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Century Gothic"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border Width="auto" Height="30" Background="White" BorderThickness="1">
+                            <Border.BorderBrush>
+                                <LinearGradientBrush EndPoint="0, 0.5" MappingMode="RelativeToBoundingBox" StartPoint="1, 0.5">
+                                    <GradientStop Color="#FFCEA345" Offset="1.0"/>
+                                    <GradientStop Color="#FFCEB46F" Offset="0.0"/>
+                                </LinearGradientBrush>
+                            </Border.BorderBrush>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
+                            </ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -49,28 +71,29 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Наименование предприятия" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,19"/>
-        <TextBlock Text="Фамилия" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Margin="75,19"/>
-        <TextBlock Text="Имя" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2" Margin="95,20,94,19"/>
-        <TextBlock Text="Отчество" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3" Margin="76,19"/>
-        <TextBlock Text="Номер телефона" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="4" Margin="42,19,41,19"/>
-        <TextBlock Text="Адрес" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="5" Margin="85,19"/>
-        <TextBlock Text="Статус" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="6" Margin="84,19"/>
-        <TextBox Name="TB_TitleC"  Grid.Column="1" VerticalAlignment="Center" Height="35" Margin="0,11"/>
-        <TextBox Name="TB_LastName" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <TextBox Name="TB_FirstName" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Height="30" Margin="0,14"/>
-        <TextBox Name="TB_Patronymic" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" Height="30" Margin="0,14,0,13"/>
-        <TextBox Name="TB_Phone" Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <TextBox Name="TB_Address" Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Height="30"  Margin="0,14,0,13"/>
-        <ComboBox Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <TextBlock Text="Фото" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="3" VerticalAlignment="Center"/>
-        <Image x:Name="I_PhotoC" Grid.Column="3" Grid.Row="2" Grid.RowSpan="4"/>
-        <Button x:Name="ButtonImage" Grid.Column="3" Grid.Row="6" Content="Добавить фото" Click="Button_Click"/>
-        <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
-            <Button Content="Добавить договор" />
+        <TextBlock Text="Предприятие:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10"/>
+        <TextBlock Text="Фамилия:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Margin="10"/>
+        <TextBlock Text="Имя:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Margin="10"/>
+        <TextBlock Text="Отчество:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="3" Margin="10"/>
+        <TextBlock Text="Номер телефона:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="4" Margin="10"/>
+        <TextBlock Text="Адрес:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="5" Margin="10"/>
+        <TextBox Name="TB_TitleC"  Grid.Column="1"/>
+        <TextBox Name="TB_LastName" Grid.Column="1" Grid.Row="1"/>
+        <TextBox Name="TB_FirstName" Grid.Column="1" Grid.Row="2"/>
+        <TextBox Name="TB_Patronymic" Grid.Column="1" Grid.Row="3"/>
+        <TextBox Name="TB_Phone" Grid.Column="1" Grid.Row="4"/>
+        <TextBox Name="TB_Address" Grid.Column="1" Grid.Row="5"/>
+        <Border BorderBrush="#F1F4FB" Grid.Column="2" Grid.RowSpan="6" Margin="0 10 0 10" Width="Auto" Height="Auto" BorderThickness="2">
+            <StackPanel Orientation="Vertical">
+            <TextBlock Text="Фото" FontSize="20" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <Image x:Name="I_PhotoC" Width="200" Height="270" Source="Resources/NoPhoto.png"/>
+            <Button x:Name="ButtonImage" Content="Добавить фото" Click="Button_Click"/>
+        </StackPanel>
+        </Border>
+        <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
+            <Button Content="Добавить договор"/>
             <Button Name="AddOrEditButtonC" Content="Добавить клиента" Click="Button_Click"/>
         </StackPanel>
     </Grid>
