--- a/CRM_System/AddProductPage.xaml
+++ b/CRM_System/AddProductPage.xaml
@@ -35,6 +35,50 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Century Gothic"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border Width="auto" Height="30" Background="White" BorderThickness="1">
+                            <Border.BorderBrush>
+                                <LinearGradientBrush EndPoint="0, 0.5" MappingMode="RelativeToBoundingBox" StartPoint="1, 0.5">
+                                    <GradientStop Color="#FFCEA345" Offset="1.0"/>
+                                    <GradientStop Color="#FFCEB46F" Offset="0.0"/>
+                                </LinearGradientBrush>
+                            </Border.BorderBrush>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
+                            </ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Century Gothic"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBox">
+                        <Border Width="auto" Height="30" Background="White" BorderThickness="1">
+                            <Border.BorderBrush>
+                                <LinearGradientBrush EndPoint="0, 0.5" MappingMode="RelativeToBoundingBox" StartPoint="1, 0.5">
+                                    <GradientStop Color="#FFCEA345" Offset="1.0"/>
+                                    <GradientStop Color="#FFCEB46F" Offset="0.0"/>
+                                </LinearGradientBrush>
+                            </Border.BorderBrush>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
+                            </ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -48,17 +92,19 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Название" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <TextBlock Text="Тип продукта" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1"/>
-        <TextBlock Text="Цена" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2"/>
-        <TextBox Grid.Column="1" VerticalAlignment="Center" Height="35" Margin="0,11"/>
-        <TextBox Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Height="30" Margin="0,14"/>
-        <ComboBox Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="30" Margin="0,13,0,14"/>
-        <StackPanel Grid.Column="2" Grid.RowSpan="3" Orientation="Vertical" Width="Auto" Height="Auto" Margin="0 10 0 10">
-            <TextBlock Text="Фото" FontSize="20" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Image x:Name="I_PhotoP" Source="Resources/NoPhoto.png"/>
-            <Button x:Name="ButtonImage" Content="Добавить фото" Click="Button_Click"/>
-        </StackPanel>
+        <TextBlock Text="Название:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10"/>
+        <TextBlock Text="Тип продукта:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Margin="10"/>
+        <TextBlock Text="Цена:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Margin="10"/>
+        <TextBox Grid.Column="1"/>
+        <TextBox Grid.Column="1" Grid.Row="2"/>
+        <ComboBox Grid.Column="1" Grid.Row="1"/>
+        <Border BorderBrush="#F1F4FB" Grid.Column="2" Grid.RowSpan="3" Margin="0 10 0 10" Width="Auto" Height="Auto" BorderThickness="2">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Фото" FontSize="20" FontFamily="Century Gothic" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <Image x:Name="I_PhotoP" Width="200" Height="270" Source="Resources/NoProduct.png"/>
+                <Button x:Name="ButtonImage" Content="Добавить фото" Click="Button_Click"/>
+            </StackPanel>
+        </Border>
         <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
             <Button Content="Добавить продукцию" Click="Button_Click"/>
         </StackPanel>
