--- a/CRM_System/AddRequestPage.xaml
+++ b/CRM_System/AddRequestPage.xaml
@@ -9,7 +9,7 @@
       Title="AddRequestPage">
     <Page.Resources>
         <Style TargetType="Button">
-            <Setter Property="Width" Value="175"/>
+            <Setter Property="Width" Value="auto"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
