--- a/CRM_System/Registration.xaml
+++ b/CRM_System/Registration.xaml
@@ -8,7 +8,7 @@
         Title="Registration" Height="450" Width="800" Icon="Resources/Logo.ico">
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Width" Value="175"/>
+            <Setter Property="Width" Value="auto"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
