--- a/CRM_System/ReportPage.xaml
+++ b/CRM_System/ReportPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CRM_System.ClientListPage"
+﻿<Page x:Class="CRM_System.ReportPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:CRM_System"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ClientListPage">
+      Title="ReportPage">
     <Page.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="auto"/>
@@ -81,7 +81,7 @@
             </ListView.ItemTemplate>
         </ListView>
         <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Добавить" Click="Button_Click"/>
+            <Button Content="Вывести на печать" Click="Button_Click"/>
         </StackPanel>
     </Grid>
 </Page>
