--- a/CRM_System/ReportPage.xaml
+++ b/CRM_System/ReportPage.xaml
@@ -48,7 +48,7 @@
                 <Image Source="Resources/Search2.png" Height="20" Width="20" HorizontalAlignment="Right"/>
             </StackPanel>
         </Border>
-        <ListView SelectedValuePath="ClientID" Grid.Row="1" Name="LVClients" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Center" SelectionChanged="LVClients_SelectionChanged">
+        <ListView Grid.Row="1" Name="LVClients" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Center">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"></WrapPanel>
