--- a/CRM_System/MenuWindow.xaml
+++ b/CRM_System/MenuWindow.xaml
@@ -50,7 +50,7 @@
             <Button Content="Клиенты" Click="Button_Click_1"/>
             <Button Content="Товары" Click="Button_Click"/>
             <Button Content="Заявки" Click="Button_Click_2"/>
-            <Button Content="Отчет"/>
+            <Button Content="Отчет" Click="Button_Click_3"/>
         </StackPanel>
         <Frame NavigationUIVisibility="Hidden" Name="MainFrame" Grid.Column="1" Grid.RowSpan="3" ContentRendered="MainFrame_ContentRendered"/>
     </Grid>
