--- a/CRM_System/ReportPage.xaml
+++ b/CRM_System/ReportPage.xaml
@@ -49,6 +49,8 @@
             </StackPanel>
         </Border>-->
         <ListView SelectedValuePath="ClientID" Grid.Row="1" Name="LVClients" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Center" SelectionChanged="LVClients_SelectionChanged">
+        </Border>
+        <ListView Grid.Row="1" Name="LVClients" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Center">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"></WrapPanel>
