--- a/CRM_System/ClientListPage.xaml
+++ b/CRM_System/ClientListPage.xaml
@@ -38,16 +38,16 @@
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
-        <Border Margin="5" x:Name="SearchClient"  Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="20" Background="White" BorderBrush="#FFCEA345" BorderThickness="1">
+        <!--<Border Margin="5" x:Name="SearchClient"  Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="20" Background="White" BorderBrush="#FFCEA345" BorderThickness="1">
             <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBox x:Name="Search"  Background="White" BorderBrush="White" Width="160" Height="20"/>
                 <Image Source="Resources/Search2.png" Height="20" Width="20" HorizontalAlignment="Right"/>
             </StackPanel>
-        </Border>
+        </Border>-->
         <ListView SelectedValuePath="ClientID" Grid.Row="1" Name="LVClients" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Center" SelectionChanged="LVClients_SelectionChanged">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -72,9 +72,9 @@
                                 </Binding>
                             </Image.Source>
                         </Image>
-                        <TextBlock Text="{Binding Path=TitleCompany}" VerticalAlignment="Center" TextAlignment="Center" Width="300" TextWrapping="Wrap"
-                                   HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="1" FontFamily="Century Gothic"></TextBlock>
-                        <TextBlock Text="{Binding Path=Phone}" Grid.Row="2" Margin="5 5 5 15" HorizontalAlignment="Center" FontSize="26" FontFamily="Century Gothic" FontWeight="Bold"></TextBlock>
+                        <TextBlock Text="{Binding Path=TitleCompany}" TextAlignment="Center" Width="390" TextWrapping="Wrap" VerticalAlignment="Center"
+                                   HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="0" FontFamily="Century Gothic"></TextBlock>
+                        <TextBlock Text="{Binding Path=Phone}" Grid.Row="2" Margin="5 5 5 15" HorizontalAlignment="Center" FontSize="26" FontFamily="Century Gothic"></TextBlock>
                         <TextBlock Text="{Binding Path=ClientStatus}" Grid.Row="3" FontSize="14" FontFamily="Century Gothic" HorizontalAlignment="Center"></TextBlock>
                     </Grid>
                 </DataTemplate>
