--- a/CRM_System/MainWindow.xaml
+++ b/CRM_System/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRM_System"
         mc:Ignorable="d"
-        Title="CRM_System" Height="450" Width="800" Icon="Resources/Logo.ico">
+        Title="CRM_System" Height="450" Width="800" Icon="Resources/Logo.ico" WindowState="Maximized">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="auto"/>
