--- a/CRM_System/ProfilePage.xaml
+++ b/CRM_System/ProfilePage.xaml
@@ -53,8 +53,9 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border Grid.Row="1" Grid.RowSpan="6" BorderThickness="1" BorderBrush="#FFCEB46F">
-            <Image x:Name="I_ProfilePhoto" HorizontalAlignment="Center" Margin="5">
+        <StackPanel Grid.Row="1" Grid.RowSpan="6">
+            <Border BorderThickness="1" BorderBrush="#FFCEB46F" Width="auto" Height="auto">
+                <Image x:Name="I_ProfilePhoto" HorizontalAlignment="Center" Margin="5">
                     <Image.Source>
                         <Binding Path="Photo">
                             <Binding.TargetNullValue>
@@ -63,8 +64,9 @@
                         </Binding>
                     </Image.Source>
                 </Image>
-        </Border>
-        <Button Grid.Row="7" Content="Изменить фото" Click="Button_Click_1"/>
+            </Border>
+            <Button Grid.Row="7" Content="Изменить фото" Click="Button_Click_1"/>
+        </StackPanel>
         <TextBlock Text="Название предприятия:" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="15" FontFamily="Century Gothic"/>
         <TextBlock Text="Фамилия:" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="15" FontFamily="Century Gothic"/>
         <TextBlock Text="Имя:" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="15" FontFamily="Century Gothic"/>
@@ -83,7 +85,7 @@
         <TextBlock x:Name="TB_Address" Grid.Column="2" Grid.Row="5" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="15" FontFamily="Century Gothic"/>
         <TextBlock x:Name="TB_Status" Grid.Column="2" Grid.Row="6" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="15" FontFamily="Century Gothic"/>
         <Button x:Name="BT_Contract" Grid.Column="2" Grid.Row="7" Content="Открыть договор"/> <!--если в бд есть договор, то в кнопке будет написано "Открыть договор", если нет, то добавить-->
-        <StackPanel Grid.ColumnSpan="3" Grid.Row="8" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
+        <StackPanel Grid.ColumnSpan="3" Grid.Row="8" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0" Width="400">
             <Button x:Name="BtnEdit" Content="Редактировать" Click="BtnEdit_Click"/>
             <Button x:Name="BtnDelete" Content="Удалить" Click="BtnDelete_Click"/>
         </StackPanel>
