--- a/CRM_System/AddRequestPage.xaml
+++ b/CRM_System/AddRequestPage.xaml
@@ -86,26 +86,26 @@
         <TextBlock Text="Количесвто:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="4" Margin="10"/>
         <TextBlock Text="Сумма:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="5" Margin="10"/> <!--это поле должно автоматически считаться-->
         <Border Grid.Column="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <ComboBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <ComboBox Name="CB_Client" SelectedValuePath="ClientID" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
             <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="2" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <DatePicker BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <DatePicker Name="DP_Date" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="3" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <ComboBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <ComboBox Name="CB_Product" BorderThickness="1" BorderBrush="#FFCEA345" SelectedValuePath="ProductID"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="4" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <TextBox Name ="TB_Quantity" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="5" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
             <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
-        <Button Grid.ColumnSpan="2" Grid.Row="6" Content="Добавить продукцию"/> <!--как на складе, тип нажимаешь, и еще товар добавляешь-->
+        <Button Grid.ColumnSpan="2" Grid.Row="6" Content="Добавить продукцию" Click="Button_Click"/> <!--как на складе, тип нажимаешь, и еще товар добавляешь-->
         <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
-            <Button Content="Оформить заявку"/>
+            <Button Content="Оформить заявку" Click="Button_Click_1"/>
         </StackPanel>
     </Grid>
 </Page>
